# claudinal

./: .gitignore  LICENSE  README.md  buddy.md  index.html  package.json  plan.md  pnpm-lock.yaml  style.md  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
doc/: collab-cli-gate-2026-05-03.md  events.md  stream-json-1.txt  stream-json-2.txt  stream-json-permission.txt
public/: startup.html
scripts/: bootstrap-nsis.mjs  generate-latest-json.mjs  package-release.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_proxy.rs  app_paths.rs  auth.rs  buddy.rs  child_process.rs  commands.rs  error.rs  keychain.rs  lib.rs  main.rs  network_proxy.rs  permission_mcp.rs  plugins.rs  startup.rs
src-tauri/src/collab/: changes.rs  mcp.rs  mod.rs  providers.rs  runner.rs  store.rs
src-tauri/src/proc/: manager.rs  mod.rs  spawn.rs
src-tauri/src/session/: index.rs  mod.rs  reader.rs  search.rs  stats.rs  store.rs  watcher.rs
src/components/: AddProjectDialog.tsx  AppChrome.tsx  AppErrorBoundary.tsx  ArchivedSessionPreview.tsx  AssistantMarkdown.tsx  BuddyLoader.tsx  ChatHeader.tsx  ChatTimelineNav.tsx  CollaborationFlow.tsx  Composer.tsx  ConfirmDialog.tsx  CopyButton.tsx  DiffOverview.tsx  DiffPreview.tsx  ImageLightbox.tsx  MessageBlocks.tsx  MessageCard.tsx  MessageStream.tsx  PermissionDialog.tsx  ProjectActionsBar.tsx  ProjectPicker.tsx  QueuedComposerBar.tsx  RenameSessionDialog.tsx  RetryButton.tsx  RollingNumber.tsx  RunGroup.tsx  RunReviewCard.tsx  SearchPalette.tsx  Sidebar.tsx  SuggestionPanel.tsx  UpstreamStatusBanner.tsx  UserInputDialog.tsx  Welcome.tsx
src/lib/: appearance.ts  archivedSessions.ts  askUserQuestion.test.ts  askUserQuestion.ts  buddyBones.ts  chatTimeline.test.ts  chatTimeline.ts  claudeCliUpdate.test.ts  claudeCliUpdate.ts  collabSettings.ts  composerDrafts.test.ts  composerDrafts.ts  composerPrefs.test.ts  composerPrefs.ts  diff.test.ts  diff.ts  docxText.test.ts  docxText.ts  failedSessionCleanup.test.ts  failedSessionCleanup.ts  fileAttachments.test.ts  fileAttachments.ts  (+50 more)
(+45 files in other folders)
