[package]
name = "claudecli-desktop"
version = "0.2.4"
edition = "2021"
default-run = "claudecli-desktop"

[lib]
name = "claudecli_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "6"
dashmap = "6"
dirs = "5"
notify = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks", "gzip", "brotli", "zstd", "deflate"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
tauri-plugin-process = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
